# hogwarts-httprunner1

./: .coverage  .gitignore  .travis.yml  README.md  pyproject.toml  test_mubu_login.py
hogwarts_httprunner1/: loader.py  runner.py
tests/: test_single_api.py
tests/api/: api_login_submit.yml  get_homepage.yml  get_login.yml
